# agent

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: build-macos.yml  build.yml
crates/rustclaw-cli/: Cargo.toml
crates/rustclaw-cli/src/: discord.rs  gateway.rs  main.rs  onboarding.rs  telegram.rs
crates/rustclaw-core/: Cargo.toml
crates/rustclaw-core/src/: context.rs  cost.rs  error.rs  events.rs  export.rs  git.rs  lib.rs  mcp.rs  rag.rs  streaming.rs  types.rs  utils.rs
crates/rustclaw-core/src/agent/: conversation.rs  mod.rs  runner.rs
crates/rustclaw-core/src/providers/: anthropic.rs  mod.rs
crates/rustclaw-core/src/tools/: mod.rs
crates/rustclaw-core/tests/: unit_tests.rs
crates/rustclaw-tauri/: Cargo.toml  tauri.conf.json
crates/rustclaw-tauri/src-tauri/src/: main.rs
src/: cli.rs  config.rs  cost.rs  dashboard.rs  discord.rs  export.rs  gateway.rs  main.rs  markdown.rs  onboarding.rs  retry.rs  sandbox.rs  session.rs  streaming.rs  telegram.rs  types.rs
src/agent/: runner.rs
src/providers/: openai.rs
src/tools/: executor.rs  security.rs
