[package]
name = "rustclaw"
version = "0.2.0"
edition = "2021"
description = "A secure, functional LLM agent CLI written in Rust"
license = "MIT"

[[bin]]
name = "rustclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Interactive REPL
rustyline = "14"

# Terminal colors and markdown rendering
colored = "2"
termimad = "0.30"

# Environment variables
dotenvy = "0.15"

# Streaming / SSE
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
eventsource-stream = "0.2"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for message IDs
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = "0.4"

# Regex for parsing
regex = "1"

# Dirs for config paths
dirs = "6"

# HTTP Gateway & Dashboard (axum)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }


# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"

# Discord bot
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
