[package]
name = "rustclaw-cli"
version = "0.2.0"
edition = "2021"
description = "CLI interface for the RustClaw LLM agent"
license = "MIT"

[[bin]]
name = "rustclaw"
path = "src/main.rs"

[dependencies]
rustclaw-core = { path = "../rustclaw-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Interactive REPL
rustyline = "14"

# Terminal colors and markdown rendering
colored = "2"
termimad = "0.30"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for onboarding validation)
reqwest = { version = "0.12", features = ["json"] }

# Chrono for timestamps
chrono = "0.4"

# HTTP Gateway (axum)
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"

# Discord bot
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

# Dirs for paths
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
