[package]
name = "rustclaw-core"
version = "0.2.0"
edition = "2021"
description = "Core engine for the RustClaw LLM agent"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Streaming / SSE
tokio-stream = "0.1"
futures = "0.3"
eventsource-stream = "0.2"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID for message IDs
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = "0.4"

# Regex for parsing
regex = "1"

# Dirs for config paths
dirs = "6"

# Environment variables
dotenvy = "0.15"

# Colored output (used in streaming + tools)
colored = "2"

# Logging
log = "0.4"
